demo/k8s/keycloak-k8s-yaml/manual-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: manual-keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
  selector:
    app: keycloak
  type: NodePort
# apiVersion: v1
# kind: Service
# metadata:
#   name: keycloak
#   namespace: manual-keycloak
#   labels:
#     app: keycloak
# spec:
#   ports:
#   - name: http
#     port: 8080
#     targetPort: 8080
#   - name: https
#     port: 8443
#     targetPort: 8443
#   selector:
#     app: keycloak
#   type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: manual-keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:16.1.1
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
